<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingTop="20dp"
    android:paddingEnd="10dp"
    android:paddingBottom="20dp"
    android:showDividers="middle">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ImageCategoryActivityTitle"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_category_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ImageCategoryActivityTargetName"
            android:textSize="20sp" />
    </LinearLayout>

    <EditText
        android:inputType="text"
        android:autofillHints="@null"
        android:id="@+id/et_new_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:hint="@string/ImageCategoryActivityNewCategoryName"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/cb_private"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ImageCategoryActivityPrivateCategory" />

    <EditText
        android:autofillHints="@null"
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="textPassword"
        android:hint="@string/ImageCategoryActivityInputCategoryPassword" />

    <Button
        android:id="@+id/bt_submit_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/image_category___edit_category_button_background"
        android:text="@string/ImageCategoryActivitySubmitEdit"
        android:textColor="#ffffff" />


</LinearLayout>