<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/edit_account_dialog_will" />

    <TextView
        android:id="@+id/tv_old_account_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:textStyle="bold"
        tool:text="哈哈哈" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_old_account_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/edit_account_dialog_edit_to" />

    <EditText
        android:id="@+id/et_new_account_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text2"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:hint="@string/edit_account_dialog_input_new_account_name"
        android:inputType="text" />

    <Button
        android:id="@+id/bt_submit_edit"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_new_account_name"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:textColor="#000000"
        android:background="@drawable/bill_category___edit_category_dialog___button_background"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/edit_account_dialog_submit_add" />

</RelativeLayout>