<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:text="@string/RegisterActivityInputUserNameAndPhone"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="@null"
        android:background="@drawable/login_page___edit_background"
        android:drawableStart="@drawable/register_username"
        android:gravity="center"
        android:hint="@string/RegisterActivityInputUserName"
        android:imeOptions="actionGo"
        android:inputType="text"
        android:padding="20dp" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="@null"
        android:background="@drawable/login_page___edit_background"
        android:drawableStart="@drawable/login___phone"
        android:gravity="center"
        android:hint="@string/phone"
        android:imeOptions="actionGo"
        android:inputType="phone"
        android:padding="20dp" />


    <Button
        android:id="@+id/bt_get_verify_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/login___button___background"
        android:padding="20dp"
        android:text="@string/getVerifyCode"
        android:textAllCaps="false"
        android:textColor="#ffffff" />


</LinearLayout>