<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F8F7">

    <android.widget.Toolbar
        android:id="@+id/end_plan_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#F7F8F7"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/end_plan_img_cancel"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/back"
                android:src="@drawable/add_plan___cancel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/end_repeat"
                android:textColor="#000000"
                android:textSize="20sp" />


        </RelativeLayout>
    </android.widget.Toolbar>

    <TextView
        android:id="@+id/end_plan_tv_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/end_plan_toolbar"
        android:layout_marginTop="3dp"
        android:background="#ffffff"
        android:paddingStart="30dp"
        android:paddingTop="20dp"
        android:paddingEnd="0dp"
        android:paddingBottom="20dp"
        android:text="@string/time_end" />

    <TextView
        android:id="@+id/end_plan_tv_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/end_plan_tv_time"
        android:layout_marginTop="3dp"
        android:background="#ffffff"
        android:paddingStart="30dp"
        android:paddingTop="20dp"
        android:paddingEnd="0dp"
        android:paddingBottom="20dp"
        android:text="@string/count_end" />
</RelativeLayout>