<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/edit_category_dialog_text1"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/tv_old_category_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:textStyle="bold"
        tool:text="哈哈哈" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_old_category_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/edit_category_dialog_text2"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/et_new_category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text2"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:hint="@string/edit_category_dialog_new_category_name_hint"
        android:inputType="text"
        android:theme="@style/BlueBottomLineEditText" />

    <Button
        android:id="@+id/bt_submit_edit"
        style="?android:buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_new_category_name"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bill_category___edit_category_dialog___button_background"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/edit_category_dialog_submit_edit"
        android:textColor="@color/black" />

</RelativeLayout>